--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,28 @@ cache
 artifacts
 
 #Metadata
-metadata/warriors
-metadata/land
+metadata/warriors/metadataJSON/*
+metadata/warriors/traits/bodyaccessory/*
+metadata/warriors/traits/faceaccessory/*
+metadata/warriors/traits/tbdaccessory/*
+metadata/warriors/traits/armor/1/*
+metadata/warriors/traits/armor/2/*
+metadata/warriors/traits/armor/3/*
+metadata/warriors/traits/armor/4/*
+metadata/warriors/traits/background/*
+metadata/warriors/traits/eyes/*
+metadata/warriors/traits/hair/*
+metadata/warriors/traits/mouth/*
+metadata/warriors/traits/headpiece/1/*
+metadata/warriors/traits/headpiece/2/*
+metadata/warriors/traits/headpiece/3/*
+metadata/warriors/traits/headpiece/4/*
+metadata/warriors/traits/weapon/1/*
+metadata/warriors/traits/weapon/2/*
+metadata/warriors/traits/weapon/3/*
+metadata/warriors/traits/weapon/4/*
+metadata/warriors/traits/gender/*
+
+metadata/land/*
+
+metadata/warriors/generatedWarriors/*
